# vehicleAnalysis

./: .gitignore  CMakeLists.txt  LoopQueue.h  README.md  analysis.cpp  analysis.h  analysisstream.cpp  analysisstream.h  applive.cpp  applive.h  flightControl.cpp  flightControl.h  global.cpp  global.h  httpclient.cpp  httpclient.h  main.cpp  mqttclient.cpp  mqttclient.h  rtmpstream.cpp  rtmpstream.h  test.txt  tools.h  vehiclecontrol.cpp  vehiclecontrol.h  websocketclient.cpp  websocketclient.h
config/: UserConfig.txt  config.ini
database/: drone.db
dependent_process/analysisClient/: CMakeLists.txt  analysisstream.cpp  analysisstream.h  cp.sh  global.cpp  global.h  main.cpp
dependent_process/analysisClient/analysisClient_autogen/: moc_predefs.h  mocs_compilation.cpp
dependent_process/analysisClient/analysisClient_autogen/EWIEGA46WW/: moc_analysisstream.cpp
dependent_process/analysisClient/config/: personCar_pgie_config.txt  threePiles_pgie_config.txt
dependent_process/liveTool/: CMakeLists.txt  app.cpp  app.h  main.cpp  monitor.cpp  monitor.h
dependent_process/rtmpClient/: CMakeLists.txt  global.cpp  global.h  main.cpp  rtmpstream.cpp  rtmpstream.h  tools.h
lib/: libpaho-mqtt3as.so.1  libpaho-mqtt3c.so.1  libpaho-mqtt3cs.so.1.3
psdk/sample_c++/platform/linux/manifold2/application/: dji_sdk_app_info.h
psdk/sample_c/platform/linux/manifold2/hal/: hal_uart.h
